<resources>
    <!-- Misc -->
    <string name="app_name">Project LLuca</string>
    <string name="hello_world">Hello world!</string>

    <!-- Main menu-->
    <string name="main_menu">Main Menu</string>
    <string name="welcome">Welcome to Project LLuca (Lord of the Rings LCG Unofficial companion app)</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">User Profile</string>
    <string name="sign_in_full">Please sign into your account:</string>
    <string name="deckbuilder">Deckbuilder</string>
    <string name="questlog">Quest Log</string>
    <string name="llucapaedia">LLucapaedia</string>
    <string name="cardlist">Card Browser</string>
    <string name="legal">Legal</string>

    <!-- Sign in screen-->
    <string name="user_name_label">User name:</string>
    <string name="password_label">Password:</string>
    <string name="username_hint">Enter username</string>
    <string name="password_hint">Enter password</string>
    <string name="signin_submit">Submit</string>
    <string name="new_acc_label">If you do not have an account please click the below button:</string>
    <string name="signin_create_acc">Create account</string>


   <!-- User profile screen -->
    <string name="user_profile">Current User Profile</string>
    <string name="current_user_label">User currently logged in:</string>
    <string name="dummy_username">SirBarbier</string>
    <string name="server_sync_label">Click here to synchronise with the server:</string>
    <string name="sync">Synchronise</string>
    <string name="last_sync">Last synchronisation:</string>
    <string name="dummy_sync_date">*never*</string>
    <string name="logout">Log out</string>
    <string name="logout_label">Click here to log out of your account:</string>
    <string name="edit_deck_button">Owned packs</string>
    <string name="edit_decks">Click here to edit which Adventure Packs you own:</string>

    <!-- Create account screen -->
    <string name="create_account">Please choose a username and password:</string>
    <string name="check_username">Click here to check username availability: </string>
    <string name="check">Check now</string>
    <string name="title_activity_create_account">Create an account</string>
    <string name="email">Email:</string>
    <string name="enter_email">Enter email address</string>


    <!-- Edit owned pack screen -->
    <string name="back_button">Back</string>
    <string name="save_owned_button">Edit your packs</string>
    <string name="title_activity_edit_packs">Edit owned Adventure Packs</string>
    <string name="your_packs">Your currently owned packs: </string>


    <!-- Deck list -->
    <string name="create_deck">Create New Deck</string>
    <string name="edit_deck">Edit deck</string>
    <string name="title_activity_deck_list">Deck List</string>

    <!-- Create a deck -->
    <string name="title_activity_create_deck">Create a Deck</string>
    <string name="quest_filter_button">Quests</string>
    <string name="hero_filter_button">Heroes</string>
    <string name="sphere_filter_button">Spheres</string>
    <string name="cost_filter_button">Cost</string>
    <string name="type_filter_button">Type</string>
    <string name="apply_filter_button">Apply filters</string>
    <string name="save_new_deck_button">Save deck</string>

    <!-- Edit a deck-->
    <string name="title_activity_edit_deck">Edit a Deck</string>

    <!-- Card browser -->
    <string name="title_activity_card_browser">Card Browser</string>
    <string name="Logout">Logout</string>
    <string name="title_activity_add_packs_to_user">AddPacksToUser</string>

    <!-- Add packs -->
    <string name="available_packs">Packs available (tap to add or remove): </string>
    <string name="return_to_profile">Return to user profile</string>
    <string name="search_tip">Search for a card</string>
    <string name="action_search">action_search</string>
    <string name="Settings">Settings</string>
    <string name="Search">Search</string>
    <string name="Filters">Filters</string>
    <string name="title_activity_test_layout">testLayout</string>

    <string-array name="typeSpinner">
    <item>All</item>
        <item>Ally</item>
    <item>Event</item>
    <item>Attachment</item>
    </string-array>

    <string name="title_activity_deck_card_list_filters">DeckCardListFiltersActivity</string>
    <string name="customdecklist">Custom Deck List</string>
    <string name="viewdeck">View deck</string>
    <string name="edityourpacks">Edit your packs</string>
    <string name="choosefilters">Choose filters</string>
    <string name="addheroes">Add Heroes</string>
    <string name="back">Back</string>

    <string-array name="sphereSpinner">
        <item>All</item>
        <item>Leadership</item>
        <item>Tactics</item>
        <item>Spirit</item>
        <item>Lore</item>
        <item>Baggins</item>
        <item>Neutral</item>
    </string-array>

    <string-array name="costSpinner">
        <item>Any</item>
        <item>Zero</item>
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>

    </string-array>

    <string-array name="cardbrowserSpinner">
        <item>Player card</item>
        <item>Encounter card</item>
        <item>Hero card</item>
        <item>Quest card</item>
    </string-array>

    <string-array name="threatSpinner">
    <item>Any</item>
    <item>Zero</item>
    <item>One</item>
    <item>Two</item>
    <item>Three</item>
    <item>Four</item>
    <item>Five</item>
</string-array>

    <string-array name="heroThreatSpinner">
        <item>Any</item>
        <item>Zero</item>
        <item>Five</item>
        <item>Six</item>
        <item>Seven</item>
        <item>Eight</item>
        <item>Nine</item>
        <item>Ten</item>
        <item>Eleven</item>
        <item>Twelve</item>
        <item>Thirteen</item>
    </string-array>
    <string name="title_activity_quest_browser">QuestBrowserActivity</string>
    <string name="aniron.ttf" />
    <string name="home">Home</string>

</resources>
