<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    tools:context="com.tm470.mb24853.projectlluca.UserProfileActivity"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_user_label"
        style="@style/spacing_style"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dummy_username"
        android:id="@+id/userprofile_username"
        android:background="#ffe3e3e3"
        android:textSize="20sp"
        android:textColor="#ff000000"
        android:textStyle="bold"
        style="@style/spacing_style"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_sync"
        style="@style/spacing_style"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dummy_sync_date"
        android:id="@+id/userprofile_lastsync"
        android:background="#ffe3e3e3"
        android:textSize="20sp"
        android:textColor="#ff000000"
        style="@style/spacing_style"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_sync_label"
        style="@style/spacing_style"
        android:textSize="20sp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/sync"
        android:id="@+id/sync_button"
        style="@style/spacing_style"
        android:onClick="syncWithServer"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_decks"
        style="@style/spacing_style"
        android:textSize="20sp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_deck_button"
        android:id="@+id/edit_deck_button"
        style="@style/spacing_style"
        android:onClick="loadEditOwnedPacksActivity"/>

    <TextView
        style="@style/spacing_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_label"
        android:textSize="20sp"
         />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:id="@+id/logout_button"
        style="@style/spacing_style"
        android:onClick="logoutCurrentUser"/>

</LinearLayout>
</ScrollView>