<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tm470.mb24853.projectlluca.SignInActivity">

    <TextView
        android:text="@string/sign_in_full"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/signIn1"
        style="@style/spacing_style"
        />

    <TextView
        android:text="@string/user_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signIn2"
        style="@style/spacing_style"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signin_username_entry"
        android:hint="@string/username_hint"
        android:textSize="12dp"
        style="@style/spacing_style"
        />

    <TextView
        android:text="@string/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signIn3"
        style="@style/spacing_style"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/signin_password_entry"
        android:hint="@string/password_hint"
        android:textSize="12dp"
        style="@style/spacing_style"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_submit"
        android:id="@+id/signin_submit_button"
        android:textSize="12dp"
        style="@style/spacing_style"
        android:onClick="logInUser"/>

    <TextView
        android:text="@string/new_acc_label"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/signIn4"
        android:textColor="#ffff1d20"
        style="@style/spacing_style"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_create_acc"
        android:id="@+id/signin_create_acc"
        style="@style/spacing_style"
        android:textSize="12dp"
        android:onClick="loadCreateAccountActivity"/>


</LinearLayout>
