<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:id="@+id/button"
        android:onClick="loadSignInActivity"
        android:layout_weight=".5"
        style="@style/spacing_style"
        android:textSize="12dp"
         />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Logout"
        android:id="@+id/sign_out_button"
        android:onClick="logoutCurrentUser"
        android:layout_weight=".5"
        android:textSize="12dp"
        style="@style/spacing_style"
        />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Space
                android:layout_width="0dp"
                android:layout_weight=".33"
                android:layout_height="match_parent" />
    <TextView
        android:text="Project Lluca"
        android:layout_width="0dp"
        android:layout_weight=".90"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:textSize="28dp"
        style="@style/spacing_style"
        android:id="@+id/project_lluca"
        />

            <Space
                android:layout_width="0dp"
                android:layout_weight=".21"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Space
                android:layout_width="0dp"
                android:layout_weight=".50"
                android:layout_height="match_parent" />
            <TextView
                android:text="@string/main_menu"
                android:layout_width="0dp"
                android:layout_weight=".90"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:id="@+id/main_menu_textview"
                style="@style/spacing_style"
                />

            <Space
                android:layout_width="0dp"
                android:layout_weight=".21"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Space
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="match_parent" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/deckbuilder"
        android:id="@+id/deckbuilder_button"
        android:textSize="12dp"
        style="@style/spacing_style"
        android:onClick="loadDeckListActivity" />

        <Space
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Space
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="match_parent" />
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="Quest Browser"
        android:id="@+id/questlog_button"
        android:onClick="questLog"
        android:textSize="12dp"
        style="@style/spacing_style"
        />
        <Space
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="match_parent" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Space
                android:layout_width="0dp"
                android:layout_weight=".25"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/cardlist"
                android:textSize="12dp"
                android:id="@+id/cardlist_button"
                style="@style/spacing_style"
                android:onClick="loadCardBrowserActivity"
                />

            <Space
                android:layout_width="0dp"
                android:layout_weight=".25"
                android:layout_height="match_parent" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Space
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="match_parent" />
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="How to use the app"
        android:textSize="12dp"
        android:id="@+id/llucapaedia_button"
        style="@style/spacing_style"
        android:onClick="showHelp"
        />
        <Space
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Space
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="match_parent" />
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="Legal Info"
        android:id="@+id/legal_button"
        android:textSize="12dp"
        style="@style/spacing_style"
        android:onClick="showLegalInfo"
        />

        <Space
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="match_parent" />
    </LinearLayout>




    </LinearLayout>
</ScrollView>
